Add copy-to-clipboard advice text

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <div class="pw1"></div>    
             <div class="pw2"></div>
         </div>
+        <p class="pw-copy">Click on the password to copy it to the clipboard!</p>
     </div>
     <script src="index.js"></script>
 </body>
